# Inazuma

./: .gitignore  README.md  buildozer.spec  main.py  pyproject.toml
.github/workflows/: build.yml  pyinstaller.yml
inazuma/: __init__.py
inazuma/controller/: anime_screen.py
inazuma/model/: anime_screen.py  search_screen.py
inazuma/view/: base_screen.py
inazuma/view/AnimeScreen/: anime_screen.kv  anime_screen.py
inazuma/view/DownloadsScreen/: download_screen.kv
inazuma/view/HomeScreen/: home_screen.kv
inazuma/view/MylistScreen/: my_list_screen.kv
inazuma/view/SearchScreen/: search_screen.kv  search_screen.py
inazuma/view/SearchScreen/components/: filters.kv  filters.py
inazuma/view/components/: navrail.kv  top_app_bar.kv
inazuma/view/components/auth_modal/: auth_popup.kv
inazuma/view/components/media_card/: media_card.kv  media_card.py
inazuma/view/components/media_card/components/: media_cards_container.kv  media_popup.kv
